--- a/TripTrack/tripJournal/templates/tripJournal/base.html
+++ b/TripTrack/tripJournal/templates/tripJournal/base.html
@@ -1,13 +1,37 @@
+{% load static %}
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'tripJournal/styles.css' %}">
+    <title>Trip Track</title>
 </head>
-<body>
+<body class="d-flex h-100 text-center text-bg-dark"> 
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+        <header class="mb-auto">
+            <div>
+                <a href="{% url 'home' %}">
+                    <h3 class="float-md-start mb-0 text-white">Trip Track</h3>
+                </a>
+                <nav class="nav nav-masthead justify-content-center float-md-end">
+                    <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="{% url 'home' %}">Home</a>
+                    <a class="nav-link fw-bold py-1 px-0 ms-3" href="{% url 'list_trips' %}">Trips</a>
+                    <a class="nav-link fw-bold py-1 px-0 ms-3" href="#">Log in/Sign out</a>
+                    <a class="nav-link fw-bold py-1 px-0 ms-3" href="#">Sign up</a>
+                </nav>
+            </div>
+        </header>
     {% block content %}
     {% endblock content %}
+    <footer class="mt-auto text-white-50">
+        <p>Django Personal Project by <a href="https://twitter.com/Anchit171" class="text-white">Dr Anchit Chandran</a>
+        </p>
+    </footer>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
