--- a/TripTrack/tripJournal/templates/tripJournal/index.html
+++ b/TripTrack/tripJournal/templates/tripJournal/index.html
@@ -9,7 +9,7 @@
     <p class="lead">Trip Track is your all-in-one journal platform to ensure you learn from, and have a good trip!
     </p>
     <p class="lead">
-        <a href="{% url 'list_trips' %}" class="btn btn-lg btn-light fw-bold border-white bg-white">Turn on, Tune in, Drop out</a>
+        <a href="{% url 'list_trips' %}" class="btn btn-primary btn-lg">Turn on, Tune in, Drop out</a>
     </p>
 </main>
 {% endblock content %}
