--- a/TripTrack/tripJournal/static/tripJournal/styles.css
+++ b/TripTrack/tripJournal/static/tripJournal/styles.css
@@ -1,8 +1,11 @@
 :root {
   --main: rgb(56, 1, 1);
+  --secondary: #2d5c2b;
   --muted: rgb(144, 144, 144);
   --accent: rgb(235, 145, 253);
   --accent-dark: rgb(170, 91, 185);
+  --danger: #b11700;
+
 }
 
 .cover-container {
@@ -27,16 +30,12 @@ a.trip_report_clickable {
 }
 a.trip_report_clickable .card-footer {
     background-color: inherit;
-    transition: background-color 3s;
 }
 
 a.trip_report_clickable:hover .card-footer {
   animation: rainbow-border 3s ease-in-out infinite;
 }
 
-p.trip_report_text {
-    text-align: justify;
-}
 
 @keyframes rainbow-border {
   0% {
@@ -73,4 +72,51 @@ p.trip_report_text {
 
 .btn.btn-primary:hover {
   background-color: var(--accent);
+}
+
+.btn.btn-danger {
+  background-color: var(--danger);
+  border: none;
+}
+
+.btn.btn-secondary {
+  background-color: var(--secondary);
+  border: none;
+}
+
+div.action_buttons_wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* ICONS */
+.btn:hover i.icon {
+  animation: rainbow-icon-fill 3s ease-in-out infinite;
+}
+
+@keyframes rainbow-icon-fill {
+  0% {
+     color: rgba(255, 255, 255, 1); /* Red */
+  }
+  0% {
+    color: rgba(255, 0, 0, 1); /* Red */
+  }
+  16.7% {
+     color: rgb(255, 127, 0, 1); /* Orange */
+  }
+  33.3% {
+     color: rgb(255, 255, 0, 1); /* Yellow */
+  }
+  50% {
+     color: rgb(0, 255, 0, 1); /* Green */
+  }
+  66.7% {
+     color: rgb(0, 0, 255, 1); /* Blue */
+  }
+  83.3% {
+     color: rgb(75, 0, 130, 1); /* Indigo */
+  }
+  100% {
+     color: rgb(139, 0, 255, 1); /* Violet */
+  }
 }
