--- a/TripTrack/tripJournal/static/tripJournal/styles.css
+++ b/TripTrack/tripJournal/static/tripJournal/styles.css
@@ -120,3 +120,13 @@ div.action_buttons_wrapper {
      color: rgb(139, 0, 255, 1); /* Violet */
   }
 }
+
+/* FORMS */
+
+form p{
+  text-align: start;
+}
+
+.form_border {
+  border: 0.5em solid var(--secondary);
+}
