--- a/TripTrack/tripJournal/templates/tripJournal/create_trip_report.html
+++ b/TripTrack/tripJournal/templates/tripJournal/create_trip_report.html
@@ -2,8 +2,13 @@
 
 {% block content %}
 <h1>Add trip report</h1>
-<form method="post">{% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Save">
-</form>
+<div class="row justify-content-center">
+    <div class="col-6 form_border p-4">
+        <form method="post" class="form-group">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="Submit" class="btn btn-primary mx-auto">
+        </form>
+    </div>
+</div>
 {% endblock content %}
