--- a/TripTrack/tripJournal/templates/tripJournal/view_trip.html
+++ b/TripTrack/tripJournal/templates/tripJournal/view_trip.html
@@ -4,7 +4,7 @@
 
 <div class="card my-3">
     <div class="card-body">
-        <h5 class="card-title">On {{ trip_report.date_of_trip }} I took {{ trip_report.dosage }}{{trip_report.dosage_units }} of 
+        <h5 class="card-title">On {{ trip_report.date_of_trip }} {{ trip.time_of_trip }} I took {{ trip_report.dosage }}{{trip_report.dosage_units }} of 
             {{ trip_report.substance }}.</h5>
         <h5>I was in {{ trip_report.location }}.</h5>
     </div>
