--- a/TripTrack/tripJournal/templates/tripJournal/list_trips.html
+++ b/TripTrack/tripJournal/templates/tripJournal/list_trips.html
@@ -1,6 +1,7 @@
 {% extends 'tripJournal/base.html' %}
 
 {% block content %}
+{% if user.is_authenticated %}
 <h1>Previous trips</h1>
 <div class="row">
     <div class="col">
@@ -23,4 +24,16 @@
     </div>
     {% endfor %}
 </div>
+{% else %}
+<div class="row justify-content-center">
+    <div class="col-10">
+        <h1>Entering Trip Track 🔐</h1>
+        <p>Trips are magical, but deeply personal.</p>
+        <p>To keep us all feeling safe and secure to share our journeys, we ask that you <a href="#">register</a> an account and <a href="{% url 'login' %}">sign in</a>.</p>
+        <a href="{% url 'login' %}" class="btn btn-primary text-white">
+            <i class="icon bi-box-arrow-right"></i> Sign in
+        </a>
+    </div>
+</div>
+{% endif %}
 {% endblock content %}
