--- a/TripTrack/tripJournal/templates/tripJournal/nav.html
+++ b/TripTrack/tripJournal/templates/tripJournal/nav.html
@@ -2,17 +2,45 @@
 {% url 'list_trips' as list_trips_url %}
 {% url 'view_trip' as view_trip_url %}
 {% url 'create_trip' as create_trip_url %}
+{% url 'login' as login_url %}
+{% url 'logout' as logout_url %}
 
 <header class="mb-auto">
-    <div>
+
+    <div class="span">
         <a href="{% url 'home' %}">
             <h3 class="float-md-start mb-0 text-white">Trip Track</h3>
         </a>
         <nav class="nav nav-masthead justify-content-center float-md-end">
-            <a class="nav-link fw-bold py-1 px-0 {% if request.path == home_url %}active {% endif %}" aria-current="page" href="{% url 'home' %}">Home</a>
-            <a class="nav-link {% if request.path == list_trips_url %}active {% endif %} fw-bold py-1 px-0 ms-3" href="{% url 'list_trips' %}">Trips</a>
-            <a class="nav-link {% if request.path == view_trip_url %}active {% endif %} fw-bold py-1 px-0 ms-3" href="#">Log in/Sign out</a>
-            <a class="nav-link {% if request.path == create_trip_url %}active {% endif %} fw-bold py-1 px-0 ms-3" href="#">Sign up</a>
+            <a class="nav-link fw-bold py-1 px-0 {% if request.path == home_url %}active {% endif %}"
+                aria-current="page" href="{% url 'home' %}">Home</a>
+            <a class="nav-link {% if request.path == list_trips_url %}active {% endif %} fw-bold py-1 px-0 ms-3"
+                href="{% url 'list_trips' %}">Trips</a>
+            {% if user.is_authenticated %}
+            <a class="nav-link {% if request.path == view_trip_url %}active {% endif %} fw-bold py-1 px-0 ms-3"
+                href="logout">Sign out</a>
+            {% else %}
+            <a class="nav-link {% if request.path == login_url %}active {% endif %} fw-bold py-1 px-0 ms-3"
+                href="{% url 'login' %}">Log in</a>
+            <a class="nav-link {% if request.path == logout_url %}active {% endif %} fw-bold py-1 px-0 ms-3"
+                href="#">Sign up</a>
+            {% endif %}
         </nav>
     </div>
 </header>
+<div class="row">
+    <div class="col">
+        {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <div {% if message.tags %} class="alert {{ message.tags }} alert-dismissible fade show" {% endif %}
+                role="alert">
+                {% if 'safe' in message.tags %}{{ message|safe }}{% else %}{{ message }}{% endif %}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+
+            {% endfor %}
+        </ul>
+        {% endif %}
+    </div>
+</div>
