--- a/TripTrack/tripJournal/static/tripJournal/styles.css
+++ b/TripTrack/tripJournal/static/tripJournal/styles.css
@@ -8,6 +8,10 @@
 
 }
 
+a {
+  color: var(--accent);
+}
+
 .cover-container {
   max-width: 42em;
 }
@@ -17,6 +21,10 @@
   color: var(--muted);
   border-bottom-color: var(--accent);
   border-bottom: 0.2em solid;
+}
+
+.nav-link:focus, .nav-link:hover {
+  color: var(--accent-dark);
 }
 
 .nav-link.active {
