only show user name if logged in
Signed-off-by: Anchit <anchit97123@gmail.com>

--- a/TripTrack/tripJournal/templates/tripJournal/index.html
+++ b/TripTrack/tripJournal/templates/tripJournal/index.html
@@ -6,7 +6,7 @@
 {% block content %}
 <main class="px-3">
     <h1>Have a good trip ✨</h1>
-    <p class="lead">Trip Track is your all-in-one journal platform to ensure you learn from, and have a good trip!
+    <p class="lead">Trip Track is your all-in-one journal platform to ensure you learn from, and have a good trip. Embrace the journey, cherish the lessons!
     </p>
     <p class="lead">
         <a href="{% url 'list_trips' %}" class="btn btn-primary btn-lg">Turn on, Tune in, Drop out</a>
