--- a/TripTrack/tripJournal/templates/registration/login.html
+++ b/TripTrack/tripJournal/templates/registration/login.html
@@ -7,8 +7,20 @@
         <h1>Sign in</h1>
         <form method="post" class="form-group">
             {% csrf_token %}
-            <p>{{ error }}</p>
-            {{ form.as_p }}
+            <div class="col mb-3 text-start">
+                <label for="{{ form.username.id_for_label }}" class="form-label">
+                    {{ form.username.label}}
+                </label>
+                {{ form.username }}
+                {{ form.errors.username }}
+            </div>
+            <div class="col mb-3 text-start">
+                <label for="{{ form.password.id_for_label }}" class="form-label">
+                    {{ form.password.label}}
+                </label>
+                {{ form.password }}
+                {{ form.errors.password }}
+            </div>
             <input type="submit" value="Submit" class="btn btn-primary mx-auto">
         </form>
     </div>
